second commit - index page

--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
 </head>
 <body>
 <section class="wrapper">
-    <h1>سیستم کتابخانه‌ی اشتراکی</h1>
-    <section class="buttons">
-        <a href="">ثبت نام</a>
-        <a href="">ورود</a>
-    </section>
+    <h1>بوکاشن</h1>
+    <a href="#">ثبت نام</a>
+    <a href="#">ورود</a>
 </section>
 </body>
 </html>
