arhia -login-signup

--- a/login.html
+++ b/login.html
@@ -5,14 +5,17 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Log in</title>
+    <link rel="stylesheet" href="css/signincss.css">
 </head>
 <body>
 <section class="wrapper">
-    <h1>بوکاشن</h1>
-    <a href="signup.html">ثبت نام</a>
-    <a href="login.html">ورود</a>
+    <h1>ورود</h1>
+    <form action="">
+        <input type="text" placeholder="نام کاربری یا ایمیل">
+        <input type="password" placeholder="کلمه عبور">
+        <input type="submit" value="ورود">
+    </form>
 </section>
 </body>
 </html>
