modifition on SignInLogin and index branches

--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="css/signincss.css">
 <section class="wrapper">
     <h1>ثبت نام</h1>
-    <form action="">
+    <form method="post" action="#">
         <input type="text" placeholder="نام و نام خانوادگی را وارد کنید">
         <input type="text" placeholder="نام کاربری را وارد کنید">
         <input type="text" placeholder="ایمیل را وارد کنید">
