--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body>
 <section class="wrapper">
     <h1>ورود</h1>
-    <form action="">
+    <form method="post" action="#">
         <input type="text" placeholder="نام کاربری یا ایمیل">
         <input type="password" placeholder="کلمه عبور">
         <input type="submit" value="ورود">
