mohammad - customer > main > menu

--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/customerMainPageCss.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <section class="wrapper">
@@ -13,10 +16,16 @@
     <section>
         <nav>
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">home</a></li>
-                <li><a href="#">home</a></li>
-                <li><a href="#">home</a></li>
+                <li><a href="#">صفحه اصلی</a></li>
+                <li><a href="#">داغ‌ترین‌ها</a></li>
+                <li><a href="#">دسته‌ها</a></li>
+                <li><a href="#">کتابخانه‌ی من</a></li>
+                <li>
+                    <form action="#">
+                            <i class="fa fa-search icon"></i>
+                            <input type="text" placeholder="جستجو...">
+                    </form>
+                </li>
             </ul>
         </nav>
     </section>
