mohammad - menu completed

--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -22,9 +22,21 @@
                 <li><a href="#">کتابخانه‌ی من</a></li>
                 <li>
                     <form action="#">
-                            <i class="fa fa-search icon"></i>
-                            <input type="text" placeholder="جستجو...">
+                        <i class="fa fa-search icon"></i>
+                        <input type="text" placeholder="جستجو...">
                     </form>
+                </li>
+                <li>
+                    <button>
+                        <i class="fa fa-user icon"><i class="fa fa-caret-down caret-down"></i></i>
+                    </button>
+                    <ul class="user-drop-down-menu">
+                        <li><a href="#">مشاهده پروفایل</a></li>
+                        <li><a href="#">خرید پکیج</a></li>
+                        <li><a href="#">شارژ کیف پول</a></li>
+                        <li><a href="#">تماس با ما</a></li>
+                        <li><a href="#">خروج</a></li>
+                    </ul>
                 </li>
             </ul>
         </nav>
