--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -42,6 +42,24 @@
         </nav>
     </section>
     <!--************************ end make menu *****************************-->
+    <!--************************ books *****************************-->
+    <section>
+        <!--**************************** newest *********************************-->
+        <section><h2>تازه‌ها</h2></section>
+        <section>
+            <div>
+                <img src="images/books/ayandeyeEnsan.jpg" alt="آینده انسان">
+                <br>
+                <span>کتاب آینده انسان</span>
+                <a href="#">جزئیات بیشتر</a>
+                <br>
+                <span>قیمت :</span>
+                <span>۱۲۰۰۰ تومان</span>
+            </div>
+        </section>
+        <!--**************************** end newest *********************************-->
+    </section>
+    <!--************************ end books *****************************-->
 </section>
 </body>
 </html>
