arshia -package-modified

--- a/CostumerPackage.html
+++ b/CostumerPackage.html
@@ -17,7 +17,7 @@
     <section>
         <nav>
             <ul>
-                <li><a href="#">صفحه اصلی</a></li>
+                <li><a href="customerMainPage.html">صفحه اصلی</a></li>
                 <li><a href="#">داغ‌ترین‌ها</a></li>
                 <li><a href="#">دسته‌ها</a></li>
                 <li><a href="#">کتابخانه‌ی من</a></li>
