--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -32,7 +32,7 @@
                     </button>
                     <ul class="user-drop-down-menu">
                         <li><a href="#">مشاهده پروفایل</a></li>
-                        <li><a href="#">خرید پکیج</a></li>
+                        <li><a href="CostumerPackage.html">خرید پکیج</a></li>
                         <li><a href="#">شارژ کیف پول</a></li>
                         <li><a href="#">تماس با ما</a></li>
                         <li><a href="#">خروج</a></li>
