--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -51,7 +51,7 @@
                 <img src="images/books/ayandeyeEnsan.jpg" alt="آینده انسان">
                 <br>
                 <span>کتاب آینده انسان</span>
-                <a href="#">جزئیات بیشتر</a>
+                <a href="bookDetails.html">جزئیات بیشتر</a>
                 <br>
                 <span>قیمت :</span>
                 <span>۱۲۰۰۰ تومان</span>
