--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -33,7 +33,7 @@
                     <ul class="user-drop-down-menu">
                         <li><a href="#">مشاهده پروفایل</a></li>
                         <li><a href="CostumerPackage.html">خرید پکیج</a></li>
-                        <li><a href="#">شارژ کیف پول</a></li>
+                        <li><a href="walletcharge.html">شارژ کیف پول</a></li>
                         <li><a href="#">تماس با ما</a></li>
                         <li><a href="#">خروج</a></li>
                     </ul>
