--- a/pay.html
+++ b/pay.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Pay</title>
-    <link rel="stylesheet" href="css/paycss.css">
 </head>
-<body>
-
+<body style="margin: 0; padding: 0;">
+<h1 align="center">
+    <img src="images/shapark.png" width="100%" height="700" alt="صفحه‌ی پرداخت شاپرک">
+</h1>
 </body>
 </html>
