--- a/bookDetails.html
+++ b/bookDetails.html
@@ -10,9 +10,48 @@
 </head>
 <body>
 <section class="wrapper">
+    <!--*************************** make menu ********************************-->
     <section>
         <a href="customerMainPage.html">بازگشت به صفحه اصلی </a>
     </section>
+    <!--*************************** end make menu ********************************-->
+    <!--*************************** make book details ********************************-->
+    <section>
+        <div>
+            <img src="images/books/ayandeyeEnsan.jpg" alt="عکس کتاب آینده‌ی انسان">
+            <h1>کتاب آینده‌ی انسان</h1>
+            <p>
+                در این کتاب، از تاریخ، چالش‌ها، و راه حل‌های بخردانه‌ای که پیش رو داریم، سخن خواهیم گفت. راه مخاطره آمیز است و فراز و نشیب‌هایی دارد، امّا چاره‌ای جز این نیست.
+                <br>
+                <br>
+                نام اصلی: The future of humanity: terraforming Mars, interstellar travel, immortality
+                <br>
+                آینده انسان: زمینی کردن مریخ، سفر میان ستاره ای، جاودانگی، سرنوشت ما در فراسوی زمین
+                <br>
+                نوشته: میچیو کاکو
+                <br>
+                ترجمه: جمیل آریایی
+                <br>
+                ناشر: مازیار
+                <br>
+                موضوع: اختر فیزیک، آینده
+                <br>
+                سال انتشار: ۱۳۹۷
+                <br>
+                تعداد صفحه: ۳۳۶
+            </p>
+            <br>
+            <span>دسته: علمی</span>
+            <br>
+            <span>قیمت: ۱۲۰۰۰ تومان</span>
+        </div>
+        <section class="buttons">
+            <a href="#">مشاهده خلاصه کتاب</a>
+            <br>
+            <a href="#">خرید کتاب</a>
+        </section>
+    </section>
+    <!--*************************** end make book details ********************************-->
 </section>
 </body>
 </html>
