mohammd - show my library completed

--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -18,8 +18,21 @@
             <ul>
                 <li><a href="#">صفحه اصلی</a></li>
                 <li><a href="#">داغ‌ترین‌ها</a></li>
-                <li><a href="#">دسته‌ها</a></li>
-                <li><a href="#">کتابخانه‌ی من</a></li>
+                <li>
+                    <a href="#">دسته‌ها<i class="fa fa-caret-down caret-down"></i></a>
+                    <ul class="genres-drop-down">
+                        <li>تاریخی</li>
+                        <li>روانشناسی</li>
+                        <li>مدیریتی</li>
+                        <li>رمانی و داستانی</li>
+                        <li>کودک و نوجوان</li>
+                        <li>علمی</li>
+                        <li>تخیلی</li>
+                        <li>عاشقانه</li>
+                        <li>طنز</li>
+                    </ul>
+                </li>
+                <li><a href="myLibrary.html">کتابخانه‌ی من</a></li>
                 <li>
                     <form action="#">
                         <i class="fa fa-search icon"></i>
