mohammad - modify pages

--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -48,7 +48,7 @@
                         <li><a href="CostumerPackage.html">خرید پکیج</a></li>
                         <li><a href="walletcharge.html">شارژ کیف پول</a></li>
                         <li><a href="#">تماس با ما</a></li>
-                        <li><a href="#">خروج</a></li>
+                        <li><a href="login.html">خروج</a></li>
                     </ul>
                 </li>
             </ul>
