--- a/customerMainPage.html
+++ b/customerMainPage.html
@@ -44,10 +44,10 @@
                         <i class="fa fa-user icon"><i class="fa fa-caret-down caret-down"></i></i>
                     </button>
                     <ul class="user-drop-down-menu">
-                        <li><a href="#">مشاهده پروفایل</a></li>
+                        <li><a href="profileview.html">مشاهده پروفایل</a></li>
                         <li><a href="CostumerPackage.html">خرید پکیج</a></li>
                         <li><a href="walletcharge.html">شارژ کیف پول</a></li>
-                        <li><a href="#">تماس با ما</a></li>
+                        <li><a href="contactUs.html">تماس با ما</a></li>
                         <li><a href="login.html">خروج</a></li>
                     </ul>
                 </li>
