--- a/contactUs.html
+++ b/contactUs.html
@@ -41,7 +41,7 @@
         </h2>
         <form action="#">
             <input type="text" placeholder="نام خود را وارد کنید">
-            <input type="email" placeholder="تماس خود را وارد کنید">
+            <input type="email" placeholder="ایمیل خود را وارد کنید">
             <input type="text" placeholder="شماره تماس خود را وارد کنید">
             <textarea placeholder="پیام خود را وارد کنید"></textarea>
             <input type="submit" value="ثبت پیام">
